--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
     "dotenv": "^16.0.1",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
@@ -40,9 +41,13 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "prettier": "^2.7.1",
     "react-refresh": "^0.14.0",
+    "sass": "^1.54.3",
+    "sass-loader": "^13.0.2",
     "serve": "^14.0.1",
+    "style-loader": "^3.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.5.0",
